#65 fix: fix div overflow in main view

--- a/graph_explorer/src/graph_explorer/graph_visualizer/static/style.css
+++ b/graph_explorer/src/graph_explorer/graph_visualizer/static/style.css
@@ -103,3 +103,12 @@ a .material-symbols-outlined {
     margin: 0 0.5em;
     border-radius: 0.5em;
 }
+
+#main-view-panel {
+    display: flex;
+    flex-direction: column;
+}
+
+#main-view-panel > div {
+    flex-grow: 1;
+}
